started invoice payment logic. TODO: restructure the API: UpdateInvoice -> UpdateInvoiceStatus, Add -> Generic UpdateInvoice method to add more info
